<resources>
    <string name="app_name">EasyLinux</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="command">Command</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="dont_have_an_account">Dont Have An Account ?</string>
    <string name="appName">EASY<font color="#5a4da3">Linux</font></string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="ok">OK</string>
    <string name="welcome_sreekesh">Welcome Sreekesh</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>